fixed layout issues and blog card style

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -166,18 +166,22 @@ $sizes: 12;
 @include dynamic-size-classes;
 
 #page-container {
-    position: relative;
+    
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
   }
   
   #content-wrap {
     padding-top: 50px;    /* Footer height */
     padding-bottom: 120px;    /* Footer height */
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   #footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 80px;            /* Footer height */
   }
